Developer/src/objects/Ad_Period__c.object
<CustomObject>
    <fields>
        <fullName>Days_In_Cycle__c</fullName>
        <formula>End_Date__c - Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days In Cycle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External_ID</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Is_Split__c</fullName>
        <formula>IF(MONTH(Start_Date__c) != MONTH(End_Date__c), 

IF(MONTH(Start_Date__c) == 3, &apos;true&apos;,

IF(MONTH(Start_Date__c)== 6, &apos;true&apos;,

IF(MONTH(Start_Date__c) == 9, &apos;true&apos;,

IF(MONTH(Start_Date__c) == 12, &apos;true&apos;, &apos;false&apos;)))), &apos;false&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Split</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Japan_Cycle_Code__c</fullName>
        <formula>RIGHT(Name, 1) &amp; IF( 
LEN(MID(Name, 2, FIND(&quot;_&quot;, Name)-2 )) &lt; 2, &quot;0&quot; &amp; MID(Name, 2, FIND(&quot;_&quot;, Name)-2 ), 
MID(Name, 2, FIND(&quot;_&quot;, Name)-2 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Japan Cycle Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <formula>CASE(MONTH( Start_Date__c), 
1, &quot;Q1&quot; , 
2, &quot;Q1&quot;, 
3, &quot;Q1&quot;, 
4, &quot;Q2&quot;, 
5, &quot;Q2&quot;, 
6, &quot;Q2&quot;, 
7, &quot;Q3&quot;, 
8, &quot;Q3&quot;, 
9, &quot;Q3&quot;, 
10, &quot;Q4&quot;, 
11, &quot;Q4&quot;, 
12, &quot;Q4&quot;, 
&quot;None&quot;)
&amp;TEXT(YEAR(Start_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing France</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Ad Period</label>
    <nameField>
        <label>Ad Period名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>